Fix contrast ratio nav-link

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,10 @@ h2 {
     width: 24px;
 }
 
+#navbar .nav-link {
+    color: aliceblue;
+}
+
 /* Header */
 #header .lead {
     font-family: var(--secondary-font);
